--- a/src/layout/layout.pug
+++ b/src/layout/layout.pug
@@ -17,6 +17,7 @@ html(lang='ru')
     .wrapper
       block header
         +header
+          svg(fwefwef)
       block content
       block footer
         +footer
