--- a/src/pug/blocks/footer/footer.pug
+++ b/src/pug/blocks/footer/footer.pug
@@ -1,3 +1,3 @@
 mixin footer
   footer.footer(class=attributes.class)
-    .footer__inner FOOTER   Hello world
+    .footer__inner FOOTER   привет Евгений
