--- a/src/pug/blocks/header/header.pug
+++ b/src/pug/blocks/header/header.pug
@@ -1,4 +1,33 @@
 mixin header
-  header.header
-    .header__inner HEADER
-    block svg
+  header.header.container
+    .header__inner
+      a.header__logo
+        +header-logo
+      nav.header__menu
+        ul.header__menu-list
+          li.header__menu-item
+            a.header__menu-link(href="#") 0 800 750 643
+              span.header__arrow-down
+                +arrow-black-down   
+          li.header__menu-item
+            a.header__menu-link(href="#") ПРО НАС
+              span.header__arrow-down
+                +arrow-black-down   
+          li.header__menu-item
+            a.header__menu-link(href="#") ЦЕНЫ 
+          li.header__menu-item
+            a.header__menu-link(href="#") КОНТАКТЫ
+          button.header__button-enter.button
+            span.header__button-text ВХОД
+          button.header__button-register.button
+            span.header__button-text РЕГИСТРАЦИЯ
+          li.header__menu-item
+            a.header__menu-link(href="#") РУС
+              span.header__arrow-down
+                +arrow-black-down
+      button.header__button-burger.hidden-hidden
+        span.header__button-burger-line
+        span.header__button-burger-line
+        span.header__button-burger-line
+
+
