--- a/src/pug/blocks/header/header.scss
+++ b/src/pug/blocks/header/header.scss
@@ -3,51 +3,53 @@
 
   &__inner {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding-inline: 104px;
   }
 
   .button {
-    height: 40px;
     border-radius: 45px;
-
+    padding: 8px 32px;
+    width: fit-content;
   }
 
 
   &__menu-list {
+    margin-left: 182px;
     display: flex;
     align-items: center;
     gap: 20px;
-    column-gap: 34px;
-
+    
   }
 
   &__menu-link {
     display: flex;
     align-items: center;
     gap: 5px;
-    flex-shrink: 0;
+    
+
+    &:last-child {
+      margin-left: 25px;
+    }
+    
 
     &:hover {
       .header__arrow-down {
         rotate: 180deg;
         transition: rotate 0.3s ease-in-out;
+        cursor: pointer;
       }
     }
   }
 
   &__button-enter {
-    min-width: 110px;
-    border-radius: 45px;
+    margin-left: 32px;
     background-color: #fff;
     border: 1.5px solid #1064E5;
 
   }
 
   &__button-register {
-    min-width: 189px;
-    border-radius: 45px;
+    margin-left: 24px;
     background-color: #1064E5;
     color: #FFFFFF;
   }
