--- a/src/pug/blocks/header/header.scss
+++ b/src/pug/blocks/header/header.scss
@@ -1,10 +1,11 @@
 .header {
-  margin-top: 36px;
-  width: auto;
+  width: 1440px;
+  padding-top: 36px;
 
 
   &__inner {
     display: flex;
+    width: 1440px;
     align-items: center;
 
   }
@@ -23,7 +24,7 @@
     margin-left: 182px;
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 36px;
 
   }
 
